Implement organizations related endpoints and functionality
